# RoboEval

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
examples/: 1_data_replay.py  2_convert_and_replay.py  3_load_convert_replay.py  4_eval_openvla.py  5_gather_metrics.py  6_collect_data.py  7_collect_data_oculus.py  8_replay_to_lerobot.py  test_custom_robot.py
resources/: empty_floor.xml  empty_scene.xml
roboeval/: action_modes.py  const.py  roboeval_env.py  roboeval_renderer.py
roboeval/configs/: data_collection.yaml
roboeval/data_collection/: README.md  base.py  demo_recorder.py  keyboard_input.py  oculus_input.py  teleop.py
roboeval/demonstrations/: const.py  demo.py  demo_converter.py  demo_player.py  demo_recorder.py  demo_store.py  utils.py
roboeval/envs/: empty.py  lift_pot.py  lift_tray.py  manipulation.py  pack_objects.py  rotate_utility_objects.py  stack_books.py
roboeval/envs/arenas/: arena.py
roboeval/envs/instructions/: cube_handover.json  drag_over_and_lift_tray.json  lift_pot.json  lift_tray.json  pack_box.json  pick_single_book_from_table.json  (+4 more)
roboeval/ik/: base_ik.py
roboeval/robots/: arm.py  config.py  floating_base.py  gripper.py  robot.py
roboeval/tools/: __init__.py  ycb_boundary_calc.py  ycb_boundary_calc.sh  ycb_converter.py  ycb_downloader.py
roboeval/utils/: bounding_box.py  geometry.py  metric_evaluator.py  metric_rollout.py  robot_highlighter.py  spawn_boundary.py  urdf_xml_converter.py
tools/: render_video.py
tools/demo_player/: demo_player_rendering.py
tools/demo_recorder/: demo_recorder_window.py
(+168 files in other folders)
